se agregaron las clases targeta_rfid fichaje estadistica incidencia justificacion permiso

--- a/fiexpress/fiexpress.csproj
+++ b/fiexpress/fiexpress.csproj
@@ -16,4 +16,9 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\img\" />
+    <Folder Include="wwwroot\views\" />
+  </ItemGroup>
+
 </Project>
